<resources>
    <string name="app_name">Walking Pattern</string>
    <string name="sign_in_with_google">Sign In with Google to continue.</string>

    <string name="title_activity_main">Graphs</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tap_target_navigation_icon_title">Options</string>
    <string name="tap_target_navigation_icon_description">You could change the axis or just log out of the app.</string>
    <string name="tap_target_fab_title">Send Data</string>
    <string name="tap_target_fab_description">This button will allow you to share your walking pattern with us.</string>
    <string name="tap_target_graphs_title">Graphs</string>
    <string name="tap_target_graphs_description">Your selected graphs will appear here.</string>
    <string name="app_collection_path">AppData</string>
    <string name="acc_collection_path">AccelerometerReadings</string>
    <string name="order_by_parameter">createdAtMillis</string>
    <string name="where_greater_than_parameter">createdAtMillis</string>
    <string name="database_date_format">mm:ss.SSS</string>
    <string name="atleast_one_axis_should_be_set">At least one of the axis has to be set</string>
    <string name="service_stopped_message">Service Stopped.</string>
    <string name="service_started_message">Sending your data to cloud.</string>
    <string name="orientation_alert_title">Device Orientation</string>
    <string name="orientation_alert_message">We are about to start monitoring your walking pattern. Please make sure when you put the device in your pocket, it is UPSIDE UP.</string>
    <string name="orientation_alert_positive_button_message">OK</string>
    <string name="start_walking_alert_title">NOTE</string>
    <string name="start_walking_alert_negative_button_message">I don\'t want to walk right now.</string>
    <string name="start_walking_alert_message">You better put that thing in your pocket and start walking, because I\'m only going to wait for %1$d seconds.</string>
    <string name="acc_x">Accelerometer: X - Axis</string>
    <string name="acc_y">Accelerometer: Y - Axis</string>
    <string name="acc_z">Accelerometer: Z - Axis</string>
    <string name="gyro_x">Gyroscope: X - Axis</string>
    <string name="gyro_y">Gyroscope: Y - Axis</string>
    <string name="gyro_z">Gyroscope: Z - Axis</string>
    <string name="no_activity_message">No activity detected in the past 10 mins. Press start to continue</string>
    <string name="show_x_axis">Show x-axis</string>
    <string name="show_y_axis">Show y-axis</string>
    <string name="show_z_axis">Show z-axis</string>
    <string name="download_data">Download data</string>
    <string name="logout">logout</string>
    <string name="external">External</string>
    <string name="no_accelerometer_message">No Accelerometer found on this device.</string>
    <string name="no_accelerometer_title">This app won\'t run on your device</string>
    <string name="download_completed">File saved at /storage/emulated/0/Walking Pattern/%1$s</string>
    <string name="view_file">VIEW</string>
    <string name="download_alert_message">Download process performs huge read transactions, proceed only if data is required.</string>
    <string name="download_alert_title">ATTENTION</string>
    <string name="download_anyway">Download anyway</string>
    <string name="application_icon">Application Icon</string>
</resources>
