<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="8dp"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:id="@+id/navigation_header_container">
    <!---->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circular_image_view_profile_pic_NavigationHeader"
        android:layout_width="@dimen/nav_image_size"
        android:layout_height="@dimen/nav_image_size"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_account_box_white_100dp"/>
    <!---->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:id="@+id/text_view_username_NavigationHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/text_view_emailid_NavigationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:gravity="center_horizontal"/>

</LinearLayout>
